<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about" />
    <item
        android:id="@+id/menuItemRestoreFactoryDefaults"
        android:title="@string/factory_defauls" />
</menu>